dream-big section added

--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@ body {
 h1 {
     font-size: 50px;
 }
+h2 {
+    font-size: 40px;
+}
 .orange-color {
     color: orange;
 }
 section {
     display: flex;
+    margin-bottom: 120px;
 }
 .half-width {
     width: 50%;
@@ -29,4 +33,15 @@ section {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+/* .dream-text is my contribution */
+.dream-text {
+    padding-right: 130px;
+    /* text-align: justify; */
 }
