--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h2 {
 .orange-color {
     color: orange;
 }
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 120px;
 }
@@ -44,4 +44,12 @@ section {
 .dream-text {
     padding-right: 130px;
     /* text-align: justify; */
+}
+
+/* .experience-item {
+
+} */
+
+#full-stack-experience {
+    border-left: 5px solid tomato;
 }
